src/test/ui/existential_types/generic_nondefining_use.stderr
error: non-defining existential type use in defining scope
  --> $DIR/generic_nondefining_use.rs:8:1
   |
LL | / fn cmp() -> Cmp<u32> { //~ ERROR non-defining existential type use in defining scope
LL | |     5u32
LL | | }
   | |_^
   |
note: used non-generic type u32 for generic parameter
  --> $DIR/generic_nondefining_use.rs:5:22
   |
LL | existential type Cmp<T>: 'static;
   |                      ^

error: aborting due to previous error

